plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.17.3'
}

group 'dev.kierat.plugins'
version '0.1'

repositories {
    mavenLocal()
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    implementation 'dev.kierat.plugins:jml-generator:1.0-SNAPSHOT'
}

intellij {
    version = '2024.3'
    type = 'IC'
    plugins = ['java']
    downloadSources = true
    updateSinceUntilBuild = false
}

patchPluginXml {
//    changeNotes = '''Initial walking skeleton for OpenJML IntelliJ plugin.'''
}

tasks.withType(Jar).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}